[HOPSWORKS-2828] Add notebooks for python serving on KFServing

--- a/notebooks/ml/serving/docker_and_kubernetes/tensorflow/model_serving_tensorflow.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/tensorflow/model_serving_tensorflow.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
     "title: \"Model Serving with Docker/Kubernetes and Tensorflow - MNIST Classification\"\n",
-    "date: 2021-02-24\n",
+    "date: 2022-01-10\n",
     "type: technical_note\n",
     "draft: false\n",
     "---"
@@ -54,37 +54,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check Model Repository for best model based on accuracy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Image7-Monitor.png](../../../images/models.gif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Query Model Repository for best mnist Model"
+    "### Query Model Registry for best Mnist Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import hsml\n",
-    "MODEL_NAME=\"mnist\"\n",
-    "EVALUATION_METRIC=\"accuracy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,28 +71,33 @@
     }
    ],
    "source": [
-    "conn = hsml.connection()\n",
-    "mr = conn.get_model_registry()\n",
+    "import hsml\n",
     "\n",
-    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")"
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name: mnist\n",
+      "Model name: mnist_e2e\n",
       "Model version: 1\n",
-      "{'accuracy': '0.71875'}\n"
+      "{'accuracy': '0.625'}\n"
      ]
     }
    ],
    "source": [
+    "MODEL_NAME=\"mnist_e2e\"\n",
+    "EVALUATION_METRIC=\"accuracy\"\n",
+    "\n",
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")\n",
+    "\n",
     "print('Model name: ' + best_model.name)\n",
     "print('Model version: ' + str(best_model.version))\n",
     "print(best_model.training_metrics)"
@@ -132,11 +112,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hops import serving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-01-28 11:45:02,168 INFO: Serving mniste2e successfully created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create serving instance\n",
+    "SERVING_NAME = \"mniste2e\"\n",
+    "\n",
+    "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
+    "                                    model_path=best_model.model_path, # set the path of the model to be deployed\n",
+    "                                    model_server=\"TENSORFLOW_SERVING\", # set the model server to run the model\n",
+    "                                    # optional arguments\n",
+    "                                    model_version=best_model.version, # set the version of the model to be deployed\n",
+    "                                    kfserving=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
+    "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
+    "                                    instances=1, # with KFServing, set 0 instances to leverage scale-to-zero capabilities\n",
+    "                                    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the serving instance is created, it will be shown in the \"Model Serving\" tab in the Hopsworks UI. You can view detailed information like server-logs and which Kafka Topic it is logging inference requests to."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also use the Python module to query the Hopsworks REST API about information on the existing servings using methods like: \n",
+    "\n",
+    "- `get_all()`\n",
+    "- `get_id(serving_name)`\n",
+    "- `get_model_path(serving_name)`\n",
+    "- `get_model_version(serving_name)`\n",
+    "- `get_artifact_version(serving_name)`\n",
+    "- `get_kafka_topic(serving_name)`\n",
+    "- `...`"
    ]
   },
   {
@@ -148,22 +178,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inferring model server from artifact files: TENSORFLOW_SERVING\n",
-      "Creating serving mnist for artifact /Projects/demo_ml_meb10000//Models/mnist ...\n",
-      "Serving mnist successfully created\n"
+      "Info: \tid: 31,\n",
+      "        model_path: /Projects/demo_ml_meb10000/Models/mnist_e2e,\n",
+      "        model_version: 1,\n",
+      "        artifact_version: 0,\n",
+      "        model_server: TENSORFLOW_SERVING,\n",
+      "        serving_tool: DEFAULT\n"
      ]
     }
    ],
    "source": [
-    "# Create serving instance\n",
-    "SERVING_NAME = MODEL_NAME\n",
-    "\n",
-    "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    best_model.model_path, model_version=best_model.version, # set the path and version of the model to be deployed\n",
-    "                                    kfserving=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
-    "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
-    "                                    instances=1, # with KFServing, set 0 instances to leverage scale-to-zero capabilities\n",
-    "                                    )"
+    "print(\"Info: \\tid: {},\\n \\\n",
+    "       model_path: {},\\n \\\n",
+    "       model_version: {},\\n \\\n",
+    "       artifact_version: {},\\n \\\n",
+    "       model_server: {},\\n \\\n",
+    "       serving_tool: {}\".format(\n",
+    "    serving.get_id(SERVING_NAME),\n",
+    "    serving.get_model_path(SERVING_NAME),\n",
+    "    serving.get_model_version(SERVING_NAME),\n",
+    "    serving.get_artifact_version(SERVING_NAME),\n",
+    "    serving.get_model_server(SERVING_NAME),\n",
+    "    serving.get_serving_tool(SERVING_NAME)))"
    ]
   },
   {
@@ -175,42 +211,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mnist\n"
+      "mniste2e\n"
      ]
     }
    ],
    "source": [
-    "# List all available servings in the project\n",
     "for s in serving.get_all():\n",
     "    print(s.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Stopped'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get serving status\n",
-    "serving.get_status(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classify digits with the MNIST classifier"
+    "## Classify Digits with the MNIST Classifier"
    ]
   },
   {
@@ -222,15 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting serving with name: mnist...\n",
-      "Serving with name: mnist successfully started\n"
+      "2022-01-28 11:45:03,776 INFO: Serving with name: mniste2e successfully started\n"
      ]
     }
    ],
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,26 +294,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0171465632, 0.048792474, 0.0487240963, 0.125329539, 0.154285505, 0.0121596335, 0.405637234, 0.116209693, 0.0209982134, 0.0507171303]]}\n",
-      "{'predictions': [[0.00984500162, 0.0813344792, 0.0794480368, 0.229178905, 0.146066204, 0.0101964734, 0.356174409, 0.037145935, 0.0207445342, 0.0298659969]]}\n",
-      "{'predictions': [[0.0314147845, 0.0672961771, 0.0496617593, 0.137096703, 0.171351343, 0.00814313535, 0.397425473, 0.0644465834, 0.0328251459, 0.0403388739]]}\n",
-      "{'predictions': [[0.0181549136, 0.038787093, 0.0792503878, 0.264465064, 0.136571646, 0.00646544108, 0.297726512, 0.0910884291, 0.0375934504, 0.0298969876]]}\n",
-      "{'predictions': [[0.0168738756, 0.0996855795, 0.0380544215, 0.117498912, 0.1118147, 0.0165658947, 0.379053235, 0.102008328, 0.0545530841, 0.0638920367]]}\n",
-      "{'predictions': [[0.0176697783, 0.0455756187, 0.0470717624, 0.0988537148, 0.0915572941, 0.0109392768, 0.496714264, 0.101835445, 0.0549756736, 0.0348071]]}\n",
-      "{'predictions': [[0.0205914453, 0.0654138848, 0.0507608578, 0.109451666, 0.14756158, 0.00987146609, 0.431472629, 0.090302147, 0.0381189436, 0.0364553928]]}\n",
-      "{'predictions': [[0.0319844857, 0.0610748753, 0.0706905946, 0.14923127, 0.150066555, 0.011391649, 0.384640843, 0.0522877201, 0.065342471, 0.0232895259]]}\n",
-      "{'predictions': [[0.019955175, 0.0508767068, 0.102297261, 0.0950483, 0.26953721, 0.0109694609, 0.299288541, 0.05249957, 0.0426387936, 0.056888964]]}\n",
-      "{'predictions': [[0.0268841349, 0.0481890179, 0.0405104123, 0.223767355, 0.0753803477, 0.012642215, 0.435542524, 0.0377673581, 0.0656719, 0.0336447731]]}\n",
-      "{'predictions': [[0.0316545069, 0.0524385, 0.0268935878, 0.14233245, 0.0910583362, 0.010664613, 0.481864959, 0.0971154124, 0.0333014913, 0.0326760858]]}\n",
-      "{'predictions': [[0.0146529395, 0.0730243102, 0.0754668266, 0.0760785118, 0.158810198, 0.00608280115, 0.481211245, 0.0451714061, 0.0347146802, 0.0347870588]]}\n",
-      "{'predictions': [[0.0298648961, 0.0861661658, 0.0382564589, 0.114841245, 0.122694105, 0.0161959752, 0.422252536, 0.0983899385, 0.0416136682, 0.029725058]]}\n",
-      "{'predictions': [[0.0280318856, 0.0634325817, 0.0437133424, 0.17799063, 0.286054105, 0.0121226059, 0.221906558, 0.0796185061, 0.0358458944, 0.0512838848]]}\n",
-      "{'predictions': [[0.035763368, 0.0686579943, 0.106324136, 0.192474946, 0.259408325, 0.00920116, 0.226656079, 0.0474149771, 0.0272313487, 0.0268676374]]}\n",
-      "{'predictions': [[0.0138048641, 0.0592474192, 0.0382033624, 0.154716209, 0.165679768, 0.0121336132, 0.366904467, 0.0977301672, 0.0177424084, 0.0738376752]]}\n",
-      "{'predictions': [[0.0275360607, 0.0372710526, 0.0691219494, 0.151717484, 0.195877165, 0.0133077614, 0.28821364, 0.125464097, 0.0411424451, 0.0503483824]]}\n",
-      "{'predictions': [[0.0236973837, 0.0719966814, 0.0619147, 0.18794328, 0.185334459, 0.0170248579, 0.305889249, 0.0743705, 0.0384167694, 0.033412084]]}\n",
-      "{'predictions': [[0.0275418516, 0.0509299189, 0.0435518362, 0.206807852, 0.144844249, 0.0171949361, 0.304691344, 0.0956295207, 0.0572692901, 0.0515392]]}\n",
-      "{'predictions': [[0.0305586215, 0.0941101536, 0.0405069329, 0.167417407, 0.0907427, 0.0269653387, 0.356301039, 0.104508244, 0.0603947118, 0.0284948815]]}\n"
+      "{'predictions': [[0.00572621496, 0.108208649, 0.27227217, 0.0510373078, 0.299194, 0.0186527651, 0.0198455323, 0.0278544612, 0.152300492, 0.0449083634]]}\n",
+      "{'predictions': [[0.0046633645, 0.0414372683, 0.291441888, 0.0312344842, 0.444997281, 0.0112954751, 0.014659116, 0.0170055088, 0.113880813, 0.0293848235]]}\n",
+      "{'predictions': [[0.0076998882, 0.0302102603, 0.235633671, 0.0153572187, 0.287438601, 0.0136197172, 0.0237444546, 0.0156203927, 0.322000772, 0.0486749858]]}\n",
+      "{'predictions': [[0.0108826989, 0.0823879838, 0.210901648, 0.0343613736, 0.331943542, 0.0128106838, 0.0406103022, 0.0279905479, 0.179413438, 0.0686978]]}\n",
+      "{'predictions': [[0.0109353121, 0.0673055351, 0.39981252, 0.0546917692, 0.294156522, 0.0124330763, 0.0245132856, 0.0148018971, 0.0674069598, 0.0539430939]]}\n",
+      "{'predictions': [[0.0114273727, 0.0790175945, 0.13507475, 0.0827436745, 0.370159179, 0.00988207199, 0.0314267166, 0.0309457481, 0.195226014, 0.0540968478]]}\n",
+      "{'predictions': [[0.0133531187, 0.0599063262, 0.247828186, 0.0464959219, 0.427820921, 0.0191995669, 0.0206612721, 0.0281933304, 0.0847786739, 0.0517626703]]}\n",
+      "{'predictions': [[0.00723468931, 0.111925527, 0.263983548, 0.0296120755, 0.357140779, 0.0177987386, 0.0169458222, 0.0362103, 0.104185537, 0.0549630672]]}\n",
+      "{'predictions': [[0.00825782213, 0.0608470626, 0.249044895, 0.0373915546, 0.354562044, 0.0104568275, 0.0274981633, 0.0231450014, 0.158275828, 0.0705208555]]}\n",
+      "{'predictions': [[0.0113548581, 0.0370724536, 0.236185282, 0.0362716, 0.245105356, 0.0161779951, 0.0189345255, 0.0334743597, 0.306493491, 0.0589301251]]}\n",
+      "{'predictions': [[0.00681277085, 0.11164733, 0.289175451, 0.0336382575, 0.261108965, 0.0185933951, 0.0239503831, 0.0405027345, 0.17715925, 0.0374115221]]}\n",
+      "{'predictions': [[0.0111160725, 0.0805897564, 0.239300177, 0.0385839716, 0.3445, 0.0188862346, 0.0326525047, 0.0327585265, 0.153218359, 0.0483945422]]}\n",
+      "{'predictions': [[0.00481388066, 0.0545748733, 0.238435447, 0.034287069, 0.353871942, 0.0114829037, 0.0271637905, 0.0178126022, 0.156495899, 0.101061471]]}\n",
+      "{'predictions': [[0.00633331668, 0.0470374823, 0.339952618, 0.0310638566, 0.306065679, 0.013985374, 0.0280421339, 0.0124483872, 0.154721156, 0.0603500269]]}\n",
+      "{'predictions': [[0.0117167076, 0.0657213852, 0.251739472, 0.0289249122, 0.410816878, 0.011261181, 0.040211603, 0.011705935, 0.13377139, 0.0341305584]]}\n",
+      "{'predictions': [[0.00604272867, 0.0362226181, 0.258314073, 0.0260963496, 0.358961761, 0.00796514843, 0.0122928983, 0.0202498324, 0.238217086, 0.0356375128]]}\n",
+      "{'predictions': [[0.00509981066, 0.0535564, 0.321242362, 0.0374574, 0.262698799, 0.0172182638, 0.0105276722, 0.0232814737, 0.194753274, 0.0741645545]]}\n",
+      "{'predictions': [[0.00960638188, 0.108674034, 0.268778, 0.0699506328, 0.185300842, 0.0157204196, 0.0365220755, 0.0281580407, 0.212751329, 0.0645382553]]}\n",
+      "{'predictions': [[0.00637084339, 0.0884655416, 0.20060347, 0.04854545, 0.203479424, 0.0286499448, 0.0381827056, 0.0213748738, 0.325430036, 0.0388977155]]}\n",
+      "{'predictions': [[0.00527361361, 0.0295326672, 0.279165745, 0.0256425422, 0.448510081, 0.0165301226, 0.0195797198, 0.0204584897, 0.122249223, 0.0330577828]]}\n"
      ]
     }
    ],
@@ -390,22 +403,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timeout.. no more messages to read from topic\n",
-      "serving: mnist, version: 1, timestamp: 1634307452661,\n",
+      "serving: mniste2e, version: 1, timestamp: 1643370334068,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0171465632, 0.048792474, 0.0487240963, 0.125329539, 0.154285505, 0.0121596335, 0.405637234, 0.116209693, 0.0209982134, 0.0507171303]\n",
+      "predictions: [0.00531054195, 0.0404060595, 0.290843785, 0.0300603732, 0.406977743, 0.012764995, 0.0235719737, 0.0228966139, 0.123488344, 0.0436795913]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1634307452775,\n",
+      "serving: mniste2e, version: 1, timestamp: 1643370334060,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.00984500162, 0.0813344792, 0.0794480368, 0.229178905, 0.146066204, 0.0101964734, 0.356174409, 0.037145935, 0.0207445342, 0.0298659969]\n",
+      "predictions: [0.00717737712, 0.0555244572, 0.316040367, 0.0621430837, 0.293955833, 0.0159867015, 0.0470166355, 0.0125214364, 0.149252892, 0.0403812565]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1634307452864,\n",
+      "serving: mniste2e, version: 1, timestamp: 1643370334059,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0314147845, 0.0672961771, 0.0496617593, 0.137096703, 0.171351343, 0.00814313535, 0.397425473, 0.0644465834, 0.0328251459, 0.0403388739]\n",
+      "predictions: [0.00496881455, 0.0392289087, 0.340284616, 0.0283909775, 0.31322825, 0.0148269441, 0.0102977483, 0.0242117718, 0.158610448, 0.0659515]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1634307452968,\n",
+      "serving: mniste2e, version: 1, timestamp: 1643370334060,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0181549136, 0.038787093, 0.0792503878, 0.264465064, 0.136571646, 0.00646544108, 0.297726512, 0.0910884291, 0.0375934504, 0.0298969876]\n",
+      "predictions: [0.011219847, 0.0522725135, 0.23986721, 0.0267774705, 0.435368598, 0.00980452728, 0.0200000331, 0.022984853, 0.139044553, 0.0426604077]\n",
+      "\n",
+      "serving: mniste2e, version: 1, timestamp: 1643370334411,\n",
+      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.00758659374, 0.076115191, 0.349409163, 0.0237191711, 0.286886334, 0.0122001776, 0.00834187213, 0.029796049, 0.148333102, 0.0576123595]\n",
       "\n"
      ]
     }
@@ -466,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
