--- a/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
+++ b/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
@@ -20,7 +20,7 @@
     "---\n",
     "*INPUT --> MODEL --> PREDICTION*\n",
     "\n",
-    "<font color='red'> <h3>This notebook requires KFServing</h3></font>"
+    "<font color='red'> <h3>This notebook requires KFServing to be installed</h3></font>"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "conn = hsml.connection()\n",
     "mr = conn.get_model_registry()\n",
     "\n",
-    "MODEL_NAME=\"mnist\"\n",
+    "MODEL_NAME=\"mnist_e2e\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
   },
@@ -114,9 +114,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name: mnist\n",
+      "Model name: mnist_e2e\n",
       "Model version: 1\n",
-      "{'accuracy': '0.71875'}\n"
+      "{'accuracy': '0.625'}\n"
      ]
     }
    ],
@@ -151,19 +151,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inferring model server from artifact files: TENSORFLOW_SERVING\n",
-      "Creating serving mnist for artifact /Projects/demo_ml_meb10000//Models/mnist ...\n",
-      "Serving mnist successfully created\n"
+      "2022-01-28 11:52:48,685 INFO: Serving mniste2ekf successfully created\n"
      ]
     }
    ],
    "source": [
     "# Create serving instance\n",
-    "SERVING_NAME = MODEL_NAME\n",
+    "SERVING_NAME = \"mniste2ekf\"\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    best_model.model_path, model_version=best_model.version, # set the path and version of the model to be deployed\n",
+    "                                    model_path=best_model.model_path, # set the path of the model to be deployed\n",
+    "                                    model_server=\"TENSORFLOW_SERVING\", # set the model server to run the model\n",
     "                                    kfserving=True, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
+    "                                    # optional arguments\n",
+    "                                    model_version=best_model.version, # set the version of the model to be deployed\n",
     "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
     "                                    inference_logging=\"ALL\", # with KFServing, select the type of inference data to log into Kafka, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
     "                                    instances=1, # with KFServing, set 0 instances to leverage scale-to-zero capabilities\n",
@@ -179,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mnist\n"
+      "mniste2ekf\n"
      ]
     }
    ],
@@ -233,8 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting serving with name: mnist...\n",
-      "Serving with name: mnist successfully started\n"
+      "2022-01-28 11:52:49,378 INFO: Serving with name: mniste2ekf successfully started\n"
      ]
     }
    ],
@@ -278,23 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0218618922, 0.060441982, 0.0637693629, 0.0953115523, 0.268337429, 0.011644518, 0.320831656, 0.0623592362, 0.0468038693, 0.048638504]]}\n",
-      "{'predictions': [[0.0128081683, 0.058361087, 0.0519089513, 0.0680933073, 0.101529188, 0.00917466916, 0.49870196, 0.124165297, 0.0234098844, 0.0518474728]]}\n",
-      "{'predictions': [[0.0169027131, 0.0688994601, 0.0502710305, 0.127270445, 0.0928574502, 0.010248892, 0.482126236, 0.0942078382, 0.0259690043, 0.0312469937]]}\n",
-      "{'predictions': [[0.0257082824, 0.040854983, 0.0316030905, 0.203676596, 0.138357729, 0.00987543911, 0.397324562, 0.064534761, 0.0407368727, 0.0473276041]]}\n",
-      "{'predictions': [[0.0209536515, 0.075448446, 0.0355816707, 0.167488784, 0.0865107551, 0.013768537, 0.401376575, 0.130470008, 0.0300768502, 0.0383248404]]}\n",
-      "{'predictions': [[0.02752956, 0.0587611571, 0.0508604646, 0.154312283, 0.0760035962, 0.0129964901, 0.458516, 0.092619285, 0.0247991625, 0.0436020344]]}\n",
-      "{'predictions': [[0.0190246552, 0.115838125, 0.03548453, 0.138723165, 0.12200997, 0.012828338, 0.387132406, 0.109228708, 0.0272692535, 0.032460954]]}\n",
-      "{'predictions': [[0.0295567568, 0.0489571691, 0.0415432379, 0.21964623, 0.107769594, 0.0110459328, 0.347042203, 0.142159656, 0.0240610894, 0.0282180831]]}\n",
-      "{'predictions': [[0.0125460578, 0.0528946444, 0.0296274871, 0.183094755, 0.134415448, 0.0141807096, 0.39737317, 0.0879673287, 0.0296478942, 0.0582524166]]}\n",
-      "{'predictions': [[0.0413516127, 0.0641062856, 0.0435722917, 0.159566402, 0.139954373, 0.0291613769, 0.276411712, 0.115447871, 0.0559384301, 0.0744897127]]}\n"
+      "{'predictions': [[0.00228863931, 0.039052885, 0.299541056, 0.0292527322, 0.210720837, 0.00816287566, 0.0126433428, 0.0109003522, 0.344060391, 0.0433768257]]}\n",
+      "{'predictions': [[0.00586040691, 0.0307841301, 0.33769837, 0.0337129459, 0.254304558, 0.0237869881, 0.0141318291, 0.0193788894, 0.238279134, 0.0420627445]]}\n",
+      "{'predictions': [[0.00538377091, 0.061361514, 0.238303721, 0.0285069272, 0.501042247, 0.0104929302, 0.0204542708, 0.0179179348, 0.0851745605, 0.0313620083]]}\n",
+      "{'predictions': [[0.00573793799, 0.029261997, 0.369869381, 0.0178442206, 0.450838357, 0.00611973461, 0.00844837539, 0.0112320511, 0.079323791, 0.0213241577]]}\n",
+      "{'predictions': [[0.0119106388, 0.0629702583, 0.153047368, 0.0336705893, 0.3950378, 0.00748524442, 0.0267426614, 0.0312577672, 0.249878481, 0.0279991794]]}\n",
+      "{'predictions': [[0.0111142406, 0.0491779149, 0.204911619, 0.0337088816, 0.241256326, 0.0222033393, 0.0126153091, 0.0414450057, 0.302034378, 0.0815329328]]}\n",
+      "{'predictions': [[0.00563503848, 0.0279151835, 0.28025192, 0.0385764167, 0.363024831, 0.0126688043, 0.0207744408, 0.0177768413, 0.193134412, 0.0402421467]]}\n",
+      "{'predictions': [[0.00543945516, 0.126275226, 0.163412824, 0.04192359, 0.265003413, 0.0151998475, 0.0343197025, 0.0221705418, 0.241572261, 0.0846831948]]}\n",
+      "{'predictions': [[0.00477044843, 0.0468725786, 0.208328143, 0.0335769281, 0.347728401, 0.0162629858, 0.0180092286, 0.01045975, 0.283724517, 0.0302670337]]}\n",
+      "{'predictions': [[0.00746631622, 0.0523283072, 0.304017246, 0.027453661, 0.280292451, 0.0179669447, 0.0197735652, 0.0237298273, 0.174194977, 0.0927767605]]}\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,20 +384,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307936, inferenceId:d761be39-4f35-462f-8da9-bb1359adc2bc, messageType:response\n",
-      "Predictions -> [[0.0128081683, 0.058361087, 0.0519089513, 0.0680933073, 0.101529188, 0.00917466916, 0.49870196, 0.124165297, 0.0234098844, 0.0518474728]]\n",
+      "INFO -> servingId: 33, modelName: mnist_e2e, modelVersion: 1,requestTimestamp: 1643370799, inferenceId:8fe0ab82-a9fd-424e-b154-b88eaeb82312, messageType:response\n",
+      "Predictions -> [[0.00531423138, 0.0495751873, 0.215446427, 0.0254741, 0.456469536, 0.00679346081, 0.0227076765, 0.0156853292, 0.151415035, 0.0511190034]]\n",
       "\n",
-      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:dd8c8cb7-b6ec-4142-a108-a4c8058b7584, messageType:response\n",
-      "Predictions -> [[0.0169027131, 0.0688994601, 0.0502710305, 0.127270445, 0.0928574502, 0.010248892, 0.482126236, 0.0942078382, 0.0259690043, 0.0312469937]]\n",
+      "INFO -> servingId: 33, modelName: mnist_e2e, modelVersion: 1,requestTimestamp: 1643370799, inferenceId:2eb8f1b7-5fe5-4a15-921e-1077b3bc5548, messageType:response\n",
+      "Predictions -> [[0.015544543, 0.04791224, 0.231773868, 0.0455554053, 0.352704018, 0.0196769126, 0.023360543, 0.0201557297, 0.190379784, 0.0529369563]]\n",
       "\n",
-      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:3b98b0e2-4b98-4528-b162-d8a2f0dd97f1, messageType:response\n",
-      "Predictions -> [[0.0257082824, 0.040854983, 0.0316030905, 0.203676596, 0.138357729, 0.00987543911, 0.397324562, 0.064534761, 0.0407368727, 0.0473276041]]\n",
+      "INFO -> servingId: 33, modelName: mnist_e2e, modelVersion: 1,requestTimestamp: 1643370799, inferenceId:2a85e0ed-70a4-43b3-8afd-43fdb5bb888c, messageType:response\n",
+      "Predictions -> [[0.0119756339, 0.108432077, 0.249693975, 0.0291424617, 0.297212154, 0.0278416723, 0.0237392467, 0.0305440109, 0.182935417, 0.038483344]]\n",
       "\n",
-      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:cd6ac413-0062-4668-9f9d-63daa08948e2, messageType:response\n",
-      "Predictions -> [[0.0209536515, 0.075448446, 0.0355816707, 0.167488784, 0.0865107551, 0.013768537, 0.401376575, 0.130470008, 0.0300768502, 0.0383248404]]\n",
+      "INFO -> servingId: 33, modelName: mnist_e2e, modelVersion: 1,requestTimestamp: 1643370799, inferenceId:92f62e3a-f05e-442f-91c2-7f8de7d80de9, messageType:response\n",
+      "Predictions -> [[0.0061565917, 0.0573133416, 0.157412216, 0.0603140071, 0.319210559, 0.01605873, 0.018614579, 0.0371795483, 0.204262689, 0.123477831]]\n",
       "\n",
-      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:f113fb80-16df-471e-b149-9ade8c9cfc53, messageType:response\n",
-      "Predictions -> [[0.02752956, 0.0587611571, 0.0508604646, 0.154312283, 0.0760035962, 0.0129964901, 0.458516, 0.092619285, 0.0247991625, 0.0436020344]]\n",
+      "INFO -> servingId: 33, modelName: mnist_e2e, modelVersion: 1,requestTimestamp: 1643370800, inferenceId:4c50013c-834d-4704-9808-6a6cb25dbb95, messageType:response\n",
+      "Predictions -> [[0.011226072, 0.0487205796, 0.279118955, 0.0241690688, 0.347856402, 0.0182868, 0.0276911054, 0.0257906299, 0.145419195, 0.0717211664]]\n",
       "\n"
      ]
     }
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
