--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -659,7 +659,12 @@
     "SCRIPT_PATH = best_model.version_path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                         SCRIPT_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
+    "                         model_path=MODEL_PATH, # set the path of the model to be deployed\n",
+    "                         model_server=\"PYTHON\", # set the model server to run the model\n",
+    "                         predictor=SCRIPT_PATH, # set the predictor to load the model and make predictions\n",
+    "                         # optional arguments\n",
+    "                         model_version=best_model.version, # set the version of the model to be deployed\n",
+    "                         kfserving=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
     "                         topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
     "                         instances=1 # number of replicas\n",
     "                         )"
