--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -390,11 +390,13 @@
     "SERVING_NAME = \"mnist\"\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    best_model.model_path, model_version=best_model.version, # set the path and version of the model to be deployed\n",
-    "                                    kfserving=False, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
-    "                                    topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
-    "                                    inference_logging=\"ALL\", # ALL for default deployments. With KFServing, fine-grained inference logging is supported, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
-    "                                    instances=1, # number of replicas or 0 to enable scale-to-zero capabilities (KFServing only)\n",
+    "                                    model_path=best_model.model_path, # set the path of the model to be deployed\n",
+    "                                    model_server=\"TENSORFLOW_SERVING\", # set the model server to run the model\n",
+    "                                    # optional arguments\n",
+    "                                    model_version=best_model.version, # set the version of the model to be deployed\n",
+    "                                    kfserving=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
+    "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
+    "                                    instances=1, # with KFServing, set 0 instances to leverage scale-to-zero capabilities\n",
     "                                    )"
    ]
   },
