stream_feature_group

--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a986564a",
+   "id": "34cc5d4b",
    "metadata": {},
    "source": [
     "---\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3ef8e3f0",
+   "id": "f81b80f6",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1619309085643_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1619309085643_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1619309085643_0002_01_000001/OnlineFSdemo__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1643892948709_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1643892948709_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1643892948709_0002_01_000001/delta_test__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efdd9239",
+   "id": "8d16aab6",
    "metadata": {},
    "source": [
     "# Create empty feature groups \n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f330cabe",
+   "id": "47732b69",
    "metadata": {},
    "source": [
     "### Define schema for feature groups"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ffcf548",
+   "id": "6fee8ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f70f3b",
+   "id": "4fdbe166",
    "metadata": {},
    "source": [
     "### Create empty spark dataframes "
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d9e7ee9",
+   "id": "07712e22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df1bc68",
+   "id": "36f9d552",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "334fbb72",
+   "id": "82e43fa3",
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +148,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "138f324f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extra_hudi_options = {\n",
+    "    \"hoodie.datasource.write.insert.drop.duplicates\": \"false\",\n",
+    "    \"hoodie.bulkinsert.shuffle.parallelism\":\"1\",\n",
+    "    \"hoodie.insert.shuffle.parallelism\":\"1\", \n",
+    "    \"hoodie.upsert.shuffle.parallelism\":\"1\",\n",
+    "    \"hoodie.parquet.compression.ratio\":\"0.5\"\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b9925e1a",
+   "id": "b58642dd",
    "metadata": {},
    "source": [
     "### Create feature group metadata objects and save empty spark dataframes to materialise them in hopsworks feature store.\n",
@@ -159,104 +175,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e9dc8f4e",
+   "execution_count": 9,
+   "id": "17a2c653",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd6d39510>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "card_transactions = fs.create_feature_group(\"card_transactions\", \n",
-    "                                             version = 1,\n",
-    "                                             online_enabled=False, \n",
-    "                                             statistics_config=False, \n",
-    "                                             primary_key=[\"tid\"])\n",
+    "card_transactions = fs.create_stream_feature_group(\"card_transactions\", \n",
+    "                                                     version = 1,\n",
+    "                                                     statistics_config=False, \n",
+    "                                                     primary_key=[\"tid\"])\n",
     "\n",
-    "card_transactions.save(empty_card_df)"
+    "card_transactions.save(empty_card_df, extra_hudi_options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4cd9d834",
+   "execution_count": 11,
+   "id": "e07d28b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd68cd590>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "card_transactions_10m_agg = fs.create_feature_group(\"card_transactions_10m_agg\", \n",
-    "                                              version = 1,\n",
-    "                                              online_enabled=True, \n",
-    "                                              statistics_config=False, \n",
-    "                                              primary_key=[\"cc_num\"])\n",
+    "card_transactions_10m_agg = fs.create_stream_feature_group(\"card_transactions_10m_agg\", \n",
+    "                                                              version = 1,\n",
+    "                                                              statistics_config=False, \n",
+    "                                                              primary_key=[\"cc_num\"])\n",
     "\n",
-    "card_transactions_10m_agg.save(empty_10m_agg_df)"
+    "card_transactions_10m_agg.save(empty_10m_agg_df, extra_hudi_options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1b269be0",
+   "execution_count": 12,
+   "id": "5c8f4fa0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd68e1bd0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "card_transactions_1h_agg = fs.create_feature_group(\"card_transactions_1h_agg\", \n",
-    "                                              version = 1,\n",
-    "                                              online_enabled=True, \n",
-    "                                              statistics_config=False, \n",
-    "                                              primary_key=[\"cc_num\"])\n",
+    "card_transactions_1h_agg = fs.create_stream_feature_group(\"card_transactions_1h_agg\", \n",
+    "                                                          version = 1,\n",
+    "                                                          statistics_config=False, \n",
+    "                                                          primary_key=[\"cc_num\"])\n",
     "\n",
-    "card_transactions_1h_agg.save(empty_1h_agg_df)"
+    "card_transactions_1h_agg.save(empty_1h_agg_df, extra_hudi_options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "4700fb09",
+   "execution_count": 13,
+   "id": "99a3d252",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f3cd6d18990>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "card_transactions_12h_agg = fs.create_feature_group(\"card_transactions_12h_agg\", \n",
-    "                                              version = 1,\n",
-    "                                              online_enabled=True, \n",
-    "                                              statistics_config=False, \n",
-    "                                              primary_key=[\"cc_num\"])\n",
+    "card_transactions_12h_agg = fs.create_stream_feature_group(\"card_transactions_12h_agg\", \n",
+    "                                                              version = 1,                                                              \n",
+    "                                                              statistics_config=False, \n",
+    "                                                              primary_key=[\"cc_num\"])\n",
     "\n",
-    "card_transactions_12h_agg.save(empty_12h_agg_df)"
+    "card_transactions_12h_agg.save(empty_12h_agg_df, extra_hudi_options)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "243c7b91",
+   "id": "060f0e5b",
    "metadata": {},
    "outputs": [],
    "source": []
