--- a/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b68c127b",
+   "id": "cabb4768",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2346e772",
+   "id": "4109e285",
    "metadata": {},
    "source": [
     "### Establish a connection with your Hopsworks feature store."
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9565abd",
+   "id": "4e6075b9",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c306817",
+   "id": "d49fa542",
    "metadata": {},
    "source": [
     "## Get feature groups"
@@ -74,18 +74,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a1a0ef3",
+   "id": "0f1737f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "card_transactions_10m_agg = fs.get_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
-    "card_transactions_1h_agg = fs.get_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
-    "card_transactions_12h_agg = fs.get_feature_group(\"card_transactions_12h_agg\", version = 1)"
+    "card_transactions_10m_agg = fs.get_stream_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
+    "card_transactions_1h_agg = fs.get_stream_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
+    "card_transactions_12h_agg = fs.get_stream_feature_group(\"card_transactions_12h_agg\", version = 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b6f705b",
+   "id": "3d725c77",
    "metadata": {},
    "source": [
     "## Create training dataset"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c92305ac",
+   "id": "9527e0ac",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42fcd555",
+   "id": "9cb13960",
    "metadata": {},
    "outputs": [],
    "source": []
